--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -76,10 +76,8 @@
 }
 .footer2 {
   position: absolute;
-  margin-left: 15%;
-  margin-bottom: 10%;
+  margin-bottom: 12%;
   bottom: 0;
-  /* padding-bottom: 10px; */
 }
 
 .footer2 > a{
@@ -93,11 +91,27 @@ footer{
 
 .container {
   padding: 10px;
-  /* height: 80%;
-  max-height: 80%;
-  overflow: auto; */
+  /* background: #fafafa; */
+  height: 100%;
 }
 
-.mat-mdc-menu-panel{
+/* .mat-mdc-menu-panel{
   right: 18px !important;
+} */
+
+.donate-container {
+  display: inline-flex;
+  align-items: center;
+}
+
+.donate-container img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.donate-button {
+  text-align: center;
+  font-size: 14px;
+  margin: 20px;
 }
