--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -33,9 +33,6 @@
   z-index: 2;
 }
 
-/* h1.example-app-name {
-  margin-top: 16px;
-} */
 
 .example-sidenav-container {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
@@ -57,19 +54,6 @@
   overflow: auto;
 }
 
-.footer {
-  /* position: fixed; */
-  /* bottom: 0; */
-  /* width: 100%; */
-  /* height: 40px; */
-  text-align: center;
-  /* margin: 0px; */
-  /* padding-top: 20px; */
-  /* padding-bottom: 10px; */
-  /* clear: both; */
-  font-size: medium;
-  /* position: relative; */
-}
 .mat-nav-list a.active {
   background: #eeeeee;
   color: black;
@@ -83,21 +67,12 @@
 .footer2 > a{
   color:blue;
 }
-/* 
-footer{
-  display: block;
-
-} */
 
 .container {
   padding: 10px;
-  /* background: #fafafa; */
-  height: 100%;
+  /* height: 100%; */
 }
 
-/* .mat-mdc-menu-panel{
-  right: 18px !important;
-} */
 
 .donate-container {
   display: inline-flex;
