--- a/src/app/sag/sag.component.html
+++ b/src/app/sag/sag.component.html
@@ -5,7 +5,7 @@
           <mat-card-subtitle>{{ 'SAG.CALC_REAR' | translate }}</mat-card-subtitle>
           <span class="example-spacer"></span>
           <button mat-icon-button (click)="openDialogSettingSagRear()">
-            <mat-icon  class="example-icon" aria-hidden="false" aria-label="Settings">settings</mat-icon>
+            <mat-icon  class="example-icon" inert aria-label="Settings">settings</mat-icon>
           </button>
         </mat-card-header>
         <br>
@@ -108,7 +108,7 @@
         <mat-card-subtitle>{{ 'SAG.CALC_FRONT' | translate }}</mat-card-subtitle>
         <span class="example-spacer"></span>
         <button mat-icon-button (click)="openDialogSettingSagFront()">
-          <mat-icon class="example-icon" aria-hidden="false" aria-label="Settings">settings</mat-icon>
+          <mat-icon class="example-icon" inert aria-label="Settings">settings</mat-icon>
         </button>
       </mat-card-header>
       <br>
