feat(cookies): Add banner cookie consent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-nav></app-nav>
 
+<app-cookie-consent-banner></app-cookie-consent-banner>
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
