--- a/src/app/sag/dialog-sag-setting-rear.html
+++ b/src/app/sag/dialog-sag-setting-rear.html
@@ -25,7 +25,7 @@
             </tr>
         
         </table>
-    <h3 style="font-weight: 600;">{{ 'SAG.DINAMIC' | translate }}:</h3>
+    <h3 style="font-weight: 600;">{{ 'SAG.DYNAMIC' | translate }}:</h3>
         <table class="" cellspacing="0">
             <tr>
                 <td>
